--- a/netdeneb.service
+++ b/netdeneb.service
@@ -10,11 +10,11 @@ ExecStart=/usr/bin/podman run --name netdeneb \
 	--sdnotify=conmon \
 	--cgroups=no-conmon \
 	--label "io.containers.autoupdate=registry" \
-	-e APP_CONFIG_PATH=/config/config.json \
 	-e HOST=:: \
 	-e PORT=3001 \
 	-p 3001:3001 \
-	-v ./config:/config:ro \
+	-e APP_CONFIG_PATH=/app/config.json \
+	-v ./app-config.json:/app/config.json:ro \
 	-v ./static:/app/static:ro \
 	ghcr.io/denebtm/netdeneb:latest
 ExecStop=/usr/bin/podman stop -i netdeneb
