--- a/orchestration/netdeneb-thumbgen.service
+++ b/orchestration/netdeneb-thumbgen.service
@@ -3,6 +3,7 @@ Description=leggi.es (thumbnails)
 
 [Service]
 User=netdeneb
+Restart=on-failure
 WorkingDirectory=/srv/netdeneb
 ExecStart=/usr/bin/node gm-thumbgen/build/bundle.js \
 	-b 3002 \
